tests/ui/issues/issue-98299.stderr
error[E0282]: type annotations needed for `SmallCString<N>`
  --> $DIR/issue-98299.rs:4:36
   |
LL |     SmallCString::try_from(p).map(|cstr| cstr);
   |                                    ^^^^
   |
help: consider giving this closure parameter an explicit type, where the value of const parameter `N` is specified
   |
LL |     SmallCString::try_from(p).map(|cstr: SmallCString<N>| cstr);
   |                                        +++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
